# bazel-examples

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  assets.bzl  base_images.bzl  deps.bzl  dnf_deps.bzl  go.mod  go.sum  go_deps.bzl  oci_deps.bzl  pkg_deps.bzl  proto_deps.bzl  python_deps.bzl  rpms.bzl  system_libs.bzl  zig_cc_deps.bzl
.github/workflows/: build-all.yaml  collect_artifacts.yaml
bundle/: BUILD.bazel
embed_all/: BUILD.bazel  main.go
hello_c/: BUILD.bazel
hello_cc/: BUILD.bazel  hello.cc
hello_cgo/: BUILD.bazel  hello.go
hello_cryptsetup/: BUILD.bazel  hello_cryptsetup.go
hello_go/: BUILD.bazel
hello_microservice/: BUILD.bazel  go_multiarch.bzl  platforms.bzl  service.go
lib/calc/: BUILD.bazel
rpm/: BUILD.bazel
tools/: dnf-init  dnf-tree
