load("//:zig_cc_deps.bzl", "zig_cc_deps")

zig_cc_deps()

load("@bazel-zig-cc//toolchain:defs.bzl", zig_toolchains = "toolchains")

# C / C++ toolchains
zig_toolchains(
    version = "0.11.0-dev.811+8ff9284c4",
)

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.34",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.34",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

# Go toolchain
load("//:go_deps.bzl", "go_deps")

go_deps()

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.19.5")

# Packaging rules (tar)
load("//:pkg_deps.bzl", "pkg_deps")

pkg_deps()

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

# OCI rules
load("//:oci_deps.bzl", "oci_deps")

oci_deps()

load("@contrib_rules_oci//oci:dependencies.bzl", "rules_oci_dependencies")

rules_oci_dependencies()

load("@contrib_rules_oci//oci:repositories.bzl", "LATEST_CRANE_VERSION", "LATEST_ZOT_VERSION", "oci_register_toolchains")

oci_register_toolchains(
    name = "oci",
    crane_version = LATEST_CRANE_VERSION,
    zot_version = LATEST_ZOT_VERSION,
)

# static assets

load("//:assets.bzl", "assets")

assets()
