load("@bazel-zig-cc//rules:platform.bzl", "platform_binary")

cc_binary(
    name = "hello_cc",
    srcs = ["hello.cc"],
    visibility = ["//visibility:public"],
)

# create matrix builds for all platforms
[
    platform_binary(
        name = "hello_cc_{}".format(name),
        src = "hello_cc",
        platform = platform,
        visibility = ["//visibility:public"],
    )
    for name, platform in [
        ("linux_amd64_musl", "//libc_aware/platform:linux_amd64_musl"),
        ("linux_amd64_gnu.2.34", "//libc_aware/platform:linux_amd64_gnu.2.34"),
        ("linux_arm64_musl", "//libc_aware/platform:linux_arm64_musl"),
        ("linux_arm64_gnu.2.34", "//libc_aware/platform:linux_arm64_gnu.2.34"),
        ("darwin_amd64", "//platform:darwin_amd64"),
        ("darwin_arm64", "//platform:darwin_arm64"),
    ]
]
