load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel-zig-cc//rules:platform.bzl", "platform_binary")

go_binary(
    name = "cryptsetup",
    embed = [":hello_cryptsetup_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_cryptsetup_lib",
    srcs = ["hello_cryptsetup.go"],
    importpath = "github.com/malt3/bazel-examples/hello_cryptsetup",
    visibility = ["//visibility:private"],
    deps = ["@com_github_martinjungblut_go_cryptsetup//:go-cryptsetup"],
)

# create matrix builds for all supported platforms
[
    platform_binary(
        name = "cryptsetup_{}".format(name),
        src = "cryptsetup",
        platform = platform,
        visibility = ["//visibility:public"],
    )
    for name, platform in [
        ("linux_amd64_musl", "//libc_aware/platform:linux_amd64_musl"),
        ("linux_amd64_gnu.2.34", "//libc_aware/platform:linux_amd64_gnu.2.34"),
    ]
]
