load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@contrib_rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

go_binary(
    name = "hello_service",
    embed = [":hello_microservice_lib"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_microservice_lib",
    srcs = ["service.go"],
    importpath = "github.com/malt3/bazel-examples/hello_microservice",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "service_tar",
    srcs = [
        ":hello_service",
    ],
    mode = "0755",
)

pkg_tar(
    name = "asset_tar",
    srcs = [
        "@gopher//file",
    ],
    mode = "0644",
    package_dir = "/static",
    remap_paths = {"/external/gopher/file": "/"},
)

oci_image(
    name = "image",
    architecture = "amd64",
    entrypoint = ["/hello_service"],
    os = "linux",
    tars = [
        "service_tar.tar",
        "asset_tar.tar",
    ],
)

oci_tarball(
    name = "hello",
    image = ":image",
    repotags = ["hello_microservice:latest"],
)
